# kmd

./: .env.template  .gitignore  CITATION.cff  LICENSE  README.md  install_local.sh  kmdsh.py  lint.py  profile_kmdsh.py  pyproject.toml  secrets.template.toml  xonsh_install_kmd.py
.github/workflows/: CITATION.cff  ci.yml
devtools/: generate_readme.xsh  lint.py  profile_kmd.py  update_common_deps.xsh
kmd/: __init__.py  config.py  errors.py  main.py  version.py  xonsh_shell.py
kmd/action_defs/: __init__.py  export_actions.py  fetch_actions.py  formatting_actions.py  llm_actions.py  media_actions.py  provenance_actions.py  video_actions.py  web_actions.py  web_gen_actions.py
kmd/action_exec/: action_builders.py  action_combinators.py  action_exec.py  action_registry.py  llm_action_base.py  llm_completion.py  system_actions.py
kmd/actions/: action_definitions.py  action_exec.py  action_lib.py  action_registry.py  actions.py  llm_action.py  llm_action_base.py  llm_actions.py  models.py  registry.py  system_actions.py
kmd/apis/: completion.py  openai.py
kmd/assistant/: assistant.py
kmd/commands/: __init__.py  assistant_commands.py  command_defs.py  command_output.py  command_parser.py  command_registry.py  command_results.py  commands.py  debug_commands.py  experimental_commands.py  files_commands.py  general_commands.py  help_commands.py  local_file_tools.py  native_tools.py  query_commands.py  selection_commands.py  shell_results.py  text_styles.py  web_commands.py  workspace_commands.py
kmd/concepts/: concept_formats.py  embeddings.py  normalize_concepts.py  text_similarity.py
kmd/config/: __init__.py  colors.py  lazy_imports.py  logger.py  logging.py  settings.py  setup.py  suppress_warnings.py  text_styles.py
kmd/docs/: __init__.py  about_kmd.py  api_docs.py  assemble_source_code.py  assistant_instructions.py  faq_headings.py
kmd/exec/: action_builders.py  action_combinators.py  action_exec.py  action_registry.py  combiners.py  command_exec.py  compound_actions.py  history.py  llm_action_base.py  llm_transforms.py  resolve_args.py  system_actions.py
kmd/extractors/: extractors.py
kmd/file_formats/: chat_format.py  doc_normalization.py  frontmatter_format.py  item_file_format.py  yaml_util.py
kmd/file_storage/: file_cache.py  file_cache_warmer.py  file_listings.py  file_store.py  file_types.py  filenames.py  frontmatter_format.py  item_file_format.py  metadata_dirs.py  persisted_yaml.py  store_filenames.py  workspaces.py  yaml_util.py
kmd/file_tools/: file_sort_filter.py  file_walk.py  ignore_files.py
kmd/form_input/: prompt_input.py
kmd/help/: assistant.py  command_help.py  docstrings.py  function_param_info.py  help.py  help_page.py  tldr_help.py
kmd/lang_tools/: capitalization.py  clean_headings.py  inflection.py  sentence_split.py  sentence_split_regex.py  sentence_split_spacy.py  spacy_loader.py
kmd/llms/: completion.py  fuzzy_parsing.py  llm_checks.py  llm_completion.py
kmd/media/: audio.py  audio_processing.py  image_similarity.py  markdown.py  markdown_util.py  media_cache.py  media_download.py  media_services.py  media_tools.py  pdf_output.py  speech_transcription.py  url.py  video.py  video_frames.py  video_vimeo.py  video_youtube.py  web.py  yt_dlp_tools.py  yt_dlp_utils.py
kmd/model/: __init__.py  actions_model.py  args_model.py  arguments_model.py  assistant_clarifications_model.py  assistant_commands_model.py  assistant_intents_model.py  assistant_model.py  assistant_response_model.py  canon_concept.py  canon_url.py  commands_model.py  compound_actions_model.py  constants.py  doc_elements.py  errors_model.py  file_formats_model.py  graph_model.py  html_conventions.py  item_thumbnails.py  items.py  items_model.py  language_models.py  llm_actions_model.py  llm_message_model.py  locators.py  media_model.py  messages_model.py  model.py  model_settings.py  operations_model.py  output_model.py  params_model.py  paths_model.py  preconditions_model.py  script_model.py  shell_model.py  url.py
kmd/pdf/: pdf_output.py  pdf_template.html
kmd/precondition_defs/: common_preconditions.py
kmd/preconditions/: __init__.py  common_preconditions.py  precondition_checks.py  precondition_defs.py  speaker_labels.py
kmd/provenance/: extractors.py  source_items.py  timestamps.py
kmd/query/: index_utils.py  vector_index.py
kmd/server/: local_server.py  local_server_routes.py  local_url_formatters.py  local_urls.py  port_tools.py  rich_terminal_codes.py  server_routes.py
kmd/shell/: assistant_output.py  kyrm_codes.py  rich_html.py  shell_file_info.py  shell_output.py  shell_printing.py  shell_results.py  shell_syntax.py
kmd/shell_tools/: action_wrapper.py  exception_printing.py  function_inspect.py  function_wrapper.py  git_tools.py  native_tools.py  option_parsing.py  osc_tools.py  terminal_images.py  tool_deps.py
kmd/shell_ui/: assistant_output.py  kyrm_codes.py  rich_char_transform.py  rich_indent.py  rich_kyrm_markdown.py  rich_markdown_custom.py  rich_markdown_kyrm.py  shell_file_info.py  shell_output.py  shell_results.py  shell_syntax.py
kmd/text_chunks/: chunk_divs.py  chunk_utils.py  chunking.py  div_chunks.py  div_elements.py  para_groups.py  parse_divs.py  text_node.py
kmd/text_docs/: diff_filters.py  div_chunks.py  para_groups.py  search_tokens.py  sizes.py  sliding_transforms.py  sliding_windows.py  text_diffs.py  text_doc.py  tiktoken_utils.py  token_diffs.py  token_mapping.py  unified_diffs.py  window_settings.py  wordtoks.py
kmd/text_formats/: markdown_util.py  text_formatting.py
kmd/text_formatting/: citations.py  doc_formatting.py  html_find_tags.py  html_in_md.py  markdown_normalization.py  markdown_util.py  text_formatting.py  text_styling.py  text_wrapping.py
kmd/text_handling/: capitalization.py  citations.py  doc_formatting.py  extractors.py  inflection.py  lang_tools.py  markdown_normalization.py  offset_mapping.py  sentence_segmentation.py  sentence_split_regex.py  sentence_split_spacy.py  sliding_transforms.py  sliding_windows.py  (+9 more)
secrets/: secrets.template.toml
tests/: __init__.py
xontrib/: kmd.py
(+214 files in other folders)
