[tool.poetry]
name = "kmd"
version = "0.1.0"
description = ""
authors = ["Joshua Levy <joshua@cal.berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
deepgram-sdk = "^3.4.0"
strif = "^1.0.1"
marko = "^2.1.2"
regex = "^2024.5.15"
openai = "^1.37.0"
cachetools = "^5.4.0"
requests = "^2.32.3"
pydub = "^0.25.1"
yt-dlp = "^2024.7.16"
vimeo-downloader = "^0.4.1"
assertpy = "^1.1"
ruamel-yaml = "^0.18.6"
python-slugify = "^8.0.4"
inflect = "^7.3.1"
justext = "^3.0.1"
lxml-html-clean = "^0.1.1"
cssselect = "^1.2.0"
weasyprint = "^62.3"
jinja2 = "^3.1.4"
textual = "^0.58.1"
textual-dev = "^1.5.1"
xonsh = "^0.17.0"
pygments = "^2.18.0"
humanize = "^4.10.0"
spacy = "^3.7.5"
litellm = "^1.41.28"
prompt-toolkit = "^3.0.47"
setproctitle = "^1.3.3"
tenacity = "^8.5.0"
nlpia2-wikipedia = "^1.5.16"
lazyasd = "^0.1.4"
chromadb = "^0.5.3"
llama-index-core = "^0.10.51"
llama-index-llms-openai = "^0.1.24"
llama-index-vector-stores-chroma = "^0.1.10"
llama-index-embeddings-openai = "^0.1.10"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.1"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kmd = "kmd.main:main"
xonsh_install_kmd = "xonsh_install_kmd:install"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402", "E731", "E712"]

[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "kmd",
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
