[tool.poetry]
name = "kmd"
# Keep this a dev version, as the dynamic versioning plugin is used for actual release versions:
version = "0.0.0.dev"
description = "An AI-native command line for modern workflows"
authors = ["Joshua Levy <joshua@cal.berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
frontmatter-format = "^0.1.4"
regex = "^2024.9.11"
cachetools = "^5.5.0"
assertpy = "^1.1"
python-slugify = "^8.0.4"
inflect = "^7.4.0"
justext = "^3.0.1"
lxml-html-clean = "^0.1.1"
cssselect = "^1.2.0"
weasyprint = "^62.3"
jinja2 = "^3.1.4"
pygments = "^2.18.0"
humanize = "^4.10.0"
prompt-toolkit = "^3.0.48"
setproctitle = "^1.3.3"
tenacity = "^8.5.0"
lazyasd = "^0.1.4"
python-dotenv = "^1.0.1"
thefuzz = "^0.22.1"
ripgrepy = "^2.0.0"
send2trash = "^1.8.3"
pyperclip = "^1.9.0"
python-magic = "^0.4.27"
opencv-python = "^4.10.0.84"
pydantic = "^2.9.2"
cydifflib = "^1.1.0"
marko = "^2.1.2"
requests = "^2.32.3"
pydub = "^0.25.1"
humanfriendly = "^10.0"
curl-cffi = "^0.7.3"
# yt-dlp = "^2024.8.6"
# Temp support for new Apple Podcasts format, until yt-dlp is updated:
# https://github.com/yt-dlp/yt-dlp/pull/10903
yt-dlp = { git = "https://github.com/coreywright/yt-dlp.git", branch = "ie/applepodcasts/Fix_after_website_rewrite" }
xonsh = "^0.18.3"
tiktoken = "^0.7.0"
scipy = "^1.14.1"
spacy = "^3.7.5"
litellm = "^1.50.4"
nlpia2-wikipedia = "^1.5.17"
chromadb = "^0.5.3"
llama-index-core = "^0.11.20"
llama-index-llms-openai = "^0.2.16"
llama-index-vector-stores-chroma = "^0.2.1"
llama-index-embeddings-openai = "^0.2.5"
openai = "^1.52.2"
deepgram-sdk = "^3.7.5"
firecrawl-py = "^1.4.0"
exa-py = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"
ruff = "^0.4.10"
usort = "^1.0.8.post1"
mypy = "^1.11.2"
codespell = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Auto-generated version in build, based on tag or commit.
# https://sam.hooke.me/note/2023/08/poetry-automatically-generated-package-version-from-git-commit/
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^v?(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+{{commit}}
    {%- endif -%}
"""

[tool.poetry.scripts]
kmd = "kmd.main:main"
lint = "devtools.lint:main"
test = "pytest:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402", "E731", "E712"]

[tool.mypy]
disable_error_code = [
    "import-untyped",
]

[tool.codespell]
ignore-words-list = "iTerm,Numbe"
# skip = "foo.py,bar.py"


[tool.pytest.ini_options]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "kmd",
    "tests",
]
norecursedirs = ["kmd/xontrib"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:.*deprecated.*",
    "ignore:.*Deprecation.*",
    "ignore::RuntimeWarning:xonsh.tools",
    "ignore::SyntaxWarning:pydub.utils",
    "ignore::UserWarning:pydantic",
]
